<resources>
    <string name="app_name">URFU Museum</string>
    <string name="image_description">image</string>
    <string name="exit">Exit</string>
    <string name="no_permissions">Не было получено одно или несколько обязательных разрешений. Вы можете выставить разрешения вручную в настройках.</string>
    <string name="warning">Warning</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="choose_lang">Choose Your Display Language</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="read_more">Read more</string>
    <string name="gallery">Gallery</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="first_floor">First floor</string>
    <string name="second_floor">Second floor</string>
    <string name="qr_code_incompatible">Incompatible QR Code content</string>
    <string name="entry_not_found_by_qr_code">Cannot find entry by scanned QR code</string>

    <!-- NavDrawer items -->

    <string name="museum">Museum</string>
    <string name="working_time">Working time</string>
    <string name="my_favorites">My favorites</string>
    <string name="about_museum">About museum</string>
    <string name="change_language">Change language</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About app</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Main Activity Toolbar Spinner Items -->

    <string-array name="toolbar_spinner_items">
        <item>First floor</item>
        <item>Second floor</item>
    </string-array>

    <!-- String resources -->
    <string name="timeout_fastest">150</string>
</resources>
